feat: Crear vista previa interactiva de renderizado
✨ NUEVA VISTA PREVIA:
- Página de demostración completa de renderizado
- Dos vistas: cuadrícula y lista
- Filtros avanzados: familia, vigencia, búsqueda
- Paginación inteligente con navegación
- Estadísticas en tiempo real del catálogo

🎨 INTERFACES DE RENDERIZADO:
- Vista cuadrícula: Cards con imágenes y detalles
- Vista lista: Lista compacta para móviles
- Diseño responsive para todos los dispositivos
- Efectos hover y animaciones suaves
- Manejo de imágenes faltantes

🔍 FUNCIONALIDADES AVANZADAS:
- Búsqueda con debounce de 500ms
- Filtros por familia y vigencia
- Selector de productos por página (6, 12, 24, 48)
- Reset automático a página 1 en búsquedas
- Estado de carga y manejo de errores

💻 EJEMPLOS DE CÓDIGO:
- Código JavaScript completo incluido
- Ejemplos de renderizado de cuadrícula y lista
- Manejo de errores de imágenes
- Implementación de paginación
- Estilos CSS para todos los componentes

📊 ESTADÍSTICAS EN TIEMPO REAL:
- Total de productos disponibles
- Número de familias y líneas
- Productos activos vs inactivos
- Actualización automática de datos

📱 RESPONSIVE DESIGN:
- Desktop: Grid 3-4 columnas, lista horizontal
- Tablet: Grid 2 columnas, lista adaptativa
- Mobile: Grid 1 columna, lista vertical
- Controles adaptativos por dispositivo

🚀 CASOS DE USO:
- Desarrolladores: Ver ejemplos reales de implementación
- Diseñadores: Evaluar experiencia visual
- Product Managers: Entender capacidades de la API
- Usuarios finales: Probar funcionalidades

🔗 INTEGRACIÓN:
- Enlace desde landing page principal
- Accesible en /preview.html
- Misma API base que la documentación
- Consistencia visual con el resto del sitio

--- a/public/index.html
+++ b/public/index.html
@@ -345,6 +345,20 @@
             <p>Estadísticas del catálogo</p>
         </div>
 
+        <!-- Vista Previa -->
+        <div class="card">
+            <h2>👀 Vista Previa de Renderizado</h2>
+            <p>Ve ejemplos prácticos de cómo renderizar los datos de la API en una interfaz real:</p>
+            <div style="text-align: center; margin: 20px 0;">
+                <a href="/preview.html" style="background: #28a745; color: white; padding: 15px 30px; border-radius: 25px; text-decoration: none; font-weight: bold; display: inline-block; transition: all 0.3s ease;">
+                    🎨 Ver Vista Previa Interactiva
+                </a>
+            </div>
+            <p style="text-align: center; color: #666; font-size: 0.9rem;">
+                Incluye filtros, búsqueda, paginación y ejemplos de código
+            </p>
+        </div>
+
         <!-- Demo Section -->
         <div class="card">
             <h2>🧪 Prueba la API</h2>
