feat: Actualizar información de contacto a WhatsApp
📱 CAMBIOS DE CONTACTO:
- Cambiar teléfono de contacto a: 11 5793-5007
- Eliminar email y sitio web de Essen
- Usar solo WhatsApp como canal de contacto
- Agregar enlaces directos de WhatsApp con wa.me

🔧 ARCHIVOS ACTUALIZADOS:
- Landing page: Botón WhatsApp con enlace directo
- Vista previa: Sección de contacto agregada
- API Essen: Mensajes de contacto actualizados
- Documentación: Información de contacto simplificada

✨ MEJORAS:
- Botón verde de WhatsApp (#25D366)
- Enlace directo: https://wa.me/541157935007
- Mensaje claro: 'Haz clic para contactar directamente'
- Diseño centrado y destacado

🎯 RESULTADO:
- Contacto unificado por WhatsApp
- Experiencia de usuario mejorada
- Información de contacto consistente
- Enlaces funcionales para contacto directo

--- a/public/index.html
+++ b/public/index.html
@@ -461,11 +461,14 @@ curl "https://backend-catalogosimple.onrender.com/api/essen/categories"</code></
         <div class="card">
             <h2>📞 Contacto para Precios</h2>
             <p>Para obtener información de precios y cuotas:</p>
-            <ul>
-                <li>📧 <strong>Email:</strong> contacto@essen.com</li>
-                <li>📱 <strong>WhatsApp:</strong> +54 9 11 1234-5678</li>
-                <li>🌐 <strong>Web:</strong> www.essen.com.ar</li>
-            </ul>
+            <div style="text-align: center; margin: 20px 0;">
+                <a href="https://wa.me/541157935007" target="_blank" style="background: #25D366; color: white; padding: 15px 30px; border-radius: 25px; text-decoration: none; font-weight: bold; display: inline-block; transition: all 0.3s ease; font-size: 1.1rem;">
+                    📱 WhatsApp: 11 5793-5007
+                </a>
+            </div>
+            <p style="text-align: center; color: #666; font-size: 0.9rem;">
+                Haz clic para contactar directamente por WhatsApp
+            </p>
         </div>
 
         <!-- Footer -->
