--- a/public/preview.html
+++ b/public/preview.html
@@ -624,6 +624,20 @@ function renderProducts(products) {
 }</code></pre>
             </div>
         </div>
+
+        <!-- Contact -->
+        <div class="card">
+            <h2>📞 Contacto para Precios</h2>
+            <p>Para obtener información de precios y cuotas:</p>
+            <div style="text-align: center; margin: 20px 0;">
+                <a href="https://wa.me/541157935007" target="_blank" style="background: #25D366; color: white; padding: 15px 30px; border-radius: 25px; text-decoration: none; font-weight: bold; display: inline-block; transition: all 0.3s ease; font-size: 1.1rem;">
+                    📱 WhatsApp: 11 5793-5007
+                </a>
+            </div>
+            <p style="text-align: center; color: #666; font-size: 0.9rem;">
+                Haz clic para contactar directamente por WhatsApp
+            </p>
+        </div>
     </div>
 
     <script>
