--- a/public/preview.html
+++ b/public/preview.html
@@ -182,11 +182,35 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            border-radius: 8px;
+            transition: opacity 0.3s ease;
+            background: #f8f9fa;
+        }
+
+        .product-image img:hover {
+            opacity: 0.9;
+        }
+
+        .product-image img.loading {
+            opacity: 0.5;
+            background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
+            background-size: 200% 100%;
+            animation: loading 1.5s infinite;
+        }
+
+        @keyframes loading {
+            0% { background-position: 200% 0; }
+            100% { background-position: -200% 0; }
         }
 
         .product-image .no-image {
             color: #6c757d;
             font-size: 0.9rem;
+            background: #f8f9fa;
+            border: 2px dashed #dee2e6;
+            border-radius: 8px;
+            padding: 20px;
+            text-align: center;
         }
 
         .product-combo {
@@ -296,11 +320,22 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            border-radius: 8px;
+            transition: opacity 0.3s ease;
+        }
+
+        .product-item-image img:hover {
+            opacity: 0.9;
         }
 
         .product-item-image .no-image {
             color: #6c757d;
             font-size: 0.8rem;
+            background: #f8f9fa;
+            border: 2px dashed #dee2e6;
+            border-radius: 8px;
+            padding: 10px;
+            text-align: center;
         }
 
         .product-item-info {
@@ -759,10 +794,10 @@ function renderProducts(products) {
                             <div class="product-card">
                                 <div class="product-image">
                                     ${product.multimedia?.imagen ? 
-                                        `<img src="${product.multimedia.imagen}" alt="${product.descripcion}" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">` :
+                                        `<img src="${product.multimedia.imagen}" alt="${product.descripcion}" class="loading" onload="this.classList.remove('loading'); this.nextElementSibling.style.display='none';" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'; this.nextElementSibling.innerHTML='🍳 Sin imagen';" loading="lazy">` :
                                         ''
                                     }
-                                    <div class="no-image" style="${product.multimedia?.imagen ? 'display: none;' : ''}">
+                                    <div class="no-image" style="${product.multimedia?.imagen ? 'display: flex;' : 'display: flex;'}">
                                         🍳 Sin imagen
                                     </div>
                                 </div>
@@ -789,10 +824,10 @@ function renderProducts(products) {
                             <div class="product-item">
                                 <div class="product-item-image">
                                     ${product.multimedia?.imagen ? 
-                                        `<img src="${product.multimedia.imagen}" alt="${product.descripcion}" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">` :
+                                        `<img src="${product.multimedia.imagen}" alt="${product.descripcion}" class="loading" onload="this.classList.remove('loading'); this.nextElementSibling.style.display='none';" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'; this.nextElementSibling.innerHTML='🍳';" loading="lazy">` :
                                         ''
                                     }
-                                    <div class="no-image" style="${product.multimedia?.imagen ? 'display: none;' : ''}">
+                                    <div class="no-image" style="${product.multimedia?.imagen ? 'display: flex;' : 'display: flex;'}">
                                         🍳
                                     </div>
                                 </div>
